orchestration/02-intermediate/04-pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod
spec:
  containers:
    - name: task-pv-container
      image: busybox
      command: ["sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - mountPath: "/data"
          name: task-pv-storage
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: example-pvc
